--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -1,1 +1,49 @@
-default/index/index
+<div class="row">
+	<div class="col-lg-6">
+		<h2>Destaque</h2>
+		<img src="<?php echo $this->baseUrl() . '/img/carousel/guitar2.jpg' ?>" class="img-thumbnail">
+
+		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+			condimentum nibh, ut fermentum massa ju...</p>
+
+		<p><a class="btn btn-default" href="#">View details »</a></p>
+	</div>
+	<div class="col-lg-6">
+		<h2>Destaque</h2>
+		<img src="<?php echo $this->baseUrl() . '/img/carousel/guitar1.jpg' ?>" class="img-thumbnail">
+
+		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+			condimentum nibh, ut fermentum massa ju...</p>
+
+		<p><a class="btn btn-default" href="#">View details »</a></p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-lg-4">
+		<h2>Heading</h2>
+
+		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+			condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod.
+			Donec sed odio dui. </p>
+
+		<p><a class="btn btn-default" href="#">View details »</a></p>
+	</div>
+	<div class="col-lg-4">
+		<h2>Heading</h2>
+
+		<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
+			felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+			massa justo sit amet risus.</p>
+
+		<p><a class="btn btn-default" href="#">View details »</a></p>
+	</div>
+	<div class="col-lg-4">
+		<h2>Heading</h2>
+
+		<p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta
+			felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum
+			massa justo sit amet risus.</p>
+
+		<p><a class="btn btn-default" href="#">View details »</a></p>
+	</div>
+</div>
