--- a/application/modules/default/views/scripts/index/index.phtml
+++ b/application/modules/default/views/scripts/index/index.phtml
@@ -1,21 +1,35 @@
 <div class="row">
 	<div class="col-lg-6">
-		<h2>Destaque</h2>
-		<img src="<?php echo $this->baseUrl() . '/img/carousel/guitar2.jpg' ?>" class="img-thumbnail">
+		<div class="thumbnail">
+			<img src="<?php echo $this->baseUrl() . '/img/carousel/guitar2.jpg' ?>">
 
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-			condimentum nibh, ut fermentum massa ju...</p>
+			<div class="caption">
+				<h3>Destaque</h3>
 
-		<p><a class="btn btn-default" href="#">View details »</a></p>
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+					mauris
+					condimentum nibh, ut fermentum massa ju...</p>
+
+				<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default"
+				                                                                   role="button">Button</a></p>
+			</div>
+		</div>
 	</div>
 	<div class="col-lg-6">
-		<h2>Destaque</h2>
-		<img src="<?php echo $this->baseUrl() . '/img/carousel/guitar1.jpg' ?>" class="img-thumbnail">
+		<div class="thumbnail">
+			<img src="<?php echo $this->baseUrl() . '/img/carousel/guitar1.jpg' ?>">
 
-		<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-			condimentum nibh, ut fermentum massa ju...</p>
+			<div class="caption">
+				<h3>Destaque</h3>
 
-		<p><a class="btn btn-default" href="#">View details »</a></p>
+				<p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor
+					mauris
+					condimentum nibh, ut fermentum massa ju...</p>
+
+				<p><a href="#" class="btn btn-primary" role="button">Button</a> <a href="#" class="btn btn-default"
+				                                                                   role="button">Button</a></p>
+			</div>
+		</div>
 	</div>
 </div>
 <div class="row">
@@ -47,3 +61,9 @@
 		<p><a class="btn btn-default" href="#">View details »</a></p>
 	</div>
 </div>
+
+<style type="text/css">
+	.wrapper > .container {
+		padding-top: 30px;
+	}
+</style>
