--- a/application/modules/default/views/scripts/layout/layout3/navbar.phtml
+++ b/application/modules/default/views/scripts/layout/layout3/navbar.phtml
@@ -1,3 +1,9 @@
+<?php
+$controller = Zend_Controller_Front::getInstance()->getRequest()->getControllerName();
+$action = Zend_Controller_Front::getInstance()->getRequest()->getActionName();
+?>
+
+
 <div class="navbar navbar-inverse navbar-static-top">
 	<div class="container">
 		<div class="navbar-header">
@@ -6,20 +12,20 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="navbar-brand" href="<?php echo $this->Url( array( 'controller' => 'index' ), null, true ) ?>">project</a>
+			<a class="navbar-brand" href="<?php echo $this->Url( array( 'controller' => 'index' ), null, true ) ?>">GuitarPrime</a>
 		</div>
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
-				<li class="active">
+				<li <?php echo ( $controller == 'index' && $action == 'index' ) ? 'class="active"' : '' ?>>
 					<a href="<?php echo $this->Url( array( 'controller' => 'index' ), null, true ) ?>">Home</a>
 				</li>
 				<li>
 					<a href="#"><?php echo $this->translate( 'blog' ) ?></a>
 				</li>
-				<li>
+				<li <?php echo ( $controller == 'index' && $action == 'about' ) ? 'class="active"' : '' ?>>
 					<a href="<?php echo $this->Url( array( 'controller' => 'index', 'action' => 'about' ), null, true ) ?>"><?php echo $this->translate( 'about' ) ?></a>
 				</li>
-				<li>
+				<li <?php echo ( $controller == 'index' && $action == 'contact' ) ? 'class="active"' : '' ?>>
 					<a href="<?php echo $this->Url( array( 'controller' => 'index', 'action' => 'contact' ), null, true ) ?>"><?php echo $this->translate( 'contact' ) ?></a>
 				</li>
 				<li class="dropdown">
@@ -35,38 +41,54 @@
 					</ul>
 				</li>
 			</ul>
-			<?php if ( Zend_Auth::getInstance()->hasIdentity() ) { ?>
-				<ul class="nav navbar-nav navbar-right">
-					<li><?php echo Zend_Auth::getInstance()->getIdentity()->getUserName(); ?>,</li>
+
+			<div class="col-sm-4 col-md-4 pull-right">
+				<form class="navbar-form" role="search">
+					<div class="input-group">
+						<input type="text" class="form-control" placeholder="<?php echo $this->translate( 'search' ) ?>"
+						       name="txt-search">
+
+						<div class="input-group-btn">
+							<button class="btn btn-info" type="submit">
+								<i class="glyphicon glyphicon-search"></i>
+							</button>
+						</div>
+					</div>
+				</form>
+			</div>
+
+			<ul class="nav navbar-nav navbar-right">
+				<?php if ( Zend_Auth::getInstance()->hasIdentity() ) { ?>
 					<li>
-						<a href="<?php echo $this->url( array( 'controller' => 'user' ), null, false ); ?>">
-							<?php echo $this->translate( 'account' ) ?>
-						</a>
-					</li>
-					<li>
-						<a href="<?php echo $this->url( array( 'controller' => 'user', 'action' => 'logout' ), null, false ); ?>">
+						<a href="<?php echo $this->url( array( 'controller' => 'user', 'action' => 'logout' ), null, true ); ?>">
 							<?php echo $this->translate( 'logout' ) ?>
 						</a>
 					</li>
-				</ul>
-			<?php } else { ?>
-				<!--/.navbar-collapse -->
-				<form class="navbar-form navbar-right" method="post"
-				      action="<?php echo $this->Url( array( 'controller' => 'user', 'action' => 'login' ), null, true ) ?>">
-					<a href="<?php echo $this->url( array( 'controller' => 'user', 'action' => 'sign-up' ), null, false ); ?>">
-						<?php echo $this->translate( 'sign-up' ) ?>
-					</a>
-					<div class="form-group">
-						<input type="text" placeholder="<?php echo $this->translate( 'mail' ) ?>" class="form-control input-sm"
-						       name="userMail">
-					</div>
-					<div class="form-group">
-						<input type="password" placeholder="<?php echo $this->translate( 'password' ) ?>"
-						       class="form-control input-sm" name="userPassword">
-					</div>
-					<button type="submit" class="btn btn-success btn-sm"><?php echo $this->translate( 'login' ) ?></button>
-				</form>
-			<?php } ?>
+					<li class="dropdown<?php echo ( $controller == 'user' && $action == 'index' ) ? ' active' : '' ?>">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+							<?php echo $this->translate( 'my-account' ) ?> <b class="caret"></b>
+						</a>
+						<ul class="dropdown-menu" role="menu">
+							<li><a href="#">Action</a></li>
+							<li><a href="#">Another action</a></li>
+							<li><a href="#">Something else here</a></li>
+							<li class="divider"></li>
+							<li><a href="#">Separated link</a></li>
+						</ul>
+					</li>
+				<?php } else { ?>
+					<li <?php echo ( $controller == 'user' && $action == 'login' ) ? 'class="active"' : '' ?>>
+						<a href="#" class="fade right in" id="show-login" data-toggle="popover" data-placement="bottom">
+							<?php echo $this->translate( 'login' ) ?>
+						</a>
+					</li>
+					<li <?php echo ( $controller == 'user' && $action == 'sign-up' ) ? 'class="active"' : '' ?>>
+						<a href="<?php echo $this->url( array( 'controller' => 'user', 'action' => 'sign-up' ), null, true ); ?>">
+							<?php echo $this->translate( 'sign-up' ) ?>
+						</a>
+					</li>
+				<?php } ?>
+			</ul>
 		</div>
 	</div>
 </div>
