--- a/application/modules/default/views/scripts/user/index.phtml
+++ b/application/modules/default/views/scripts/user/index.phtml
@@ -1,3 +1,5 @@
-<?php $this->load( $this->url( array( 'controller' => 'index', 'action' => 'about' ), null, true ), 'div-retorno' ) ?>
+<?php $this->title = $this->translate( 'account' ) ?>
+
+<?php // $this->load( $this->url( array( 'controller' => 'index', 'action' => 'about' ), null, true ), 'div-retorno' ) ?>
 
 <div id="div-retorno"></div>
