--- a/public/css/layout3.css
+++ b/public/css/layout3.css
@@ -1,3 +1,20 @@
-body{
+body {
+    padding-top: 40px;
+}
 
+.form {
+    width: 350px;
+    max-width: 350px;
+    padding: 15px;
+    margin: 0 auto;
+}
+
+footer .title {
+    font-size: 14px;
+    padding-bottom: 5px;
+    font-weight: bold;
+}
+
+.errors li{
+    color: red;
 }
