--- a/public/css/layout3.css
+++ b/public/css/layout3.css
@@ -9,6 +9,10 @@ body {
     margin: 0 auto;
 }
 
+footer{
+    margin-top: 40px;
+}
+
 footer .title {
     font-size: 14px;
     padding-bottom: 5px;
