--- a/application/modules/default/views/scripts/blog/index.phtml
+++ b/application/modules/default/views/scripts/blog/index.phtml
@@ -1,4 +1,81 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>Blog</b> and script/action name <b>index</b></p>
+<?php $this->title = "Blog"; ?>
+
+<div class="row">
+	<div class="col-md-9">
+		<article>
+			<div class="page-header">
+				<h3 id="grid"><a href="#">Grid system</a></h3>
+			</div>
+			<p class="meta">Posted
+				<time datetime="2012-07-24" pubdate="">July 24, 2012</time>
+				by <a href="http://320press.com/wpbs/author/cbarnes/" title="Posts by Chris Barnes" rel="author">Chris
+					Barnes</a> <span class="amp">&amp;</span> filed under <a
+					href="http://320press.com/wpbs/category/releases/" title="View all posts in Releases"
+					rel="category tag">Releases</a>.
+			</p>
+			<p>
+				We make the WordPress Bootstrap CSS plugin that your referred to earlier, on Host Like Toast.</br>
+				This plugin is free and open-source, and we have tutorials on the website for how you can use WordPress
+				shortcodes to implement some of the bootstrap features.</br>
+				You could also, in your themes, use the do_shortcode() function to implement the existing shortcodes
+				easily.
+				Today we released version 2.0.0-beta so you can immediately start taking full advantage of Twitter
+				Bootstrap
+				2.0.</br>
+				We make the WordPress Bootstrap CSS plugin that your referred to earlier, on Host Like Toast.</br>
+				This plugin is free and open-source, and we have tutorials on the website for how you can use WordPress
+				shortcodes to implement some of the bootstrap features.</br>
+				You could also, in your themes, use the do_shortcode() function to implement the existing shortcodes
+				easily.
+				Today we released version 2.0.0-beta so you can immediately start taking full advantage of Twitter
+				Bootstrap
+				2.0.</br>
+			</p>
+
+			<p class="tags">
+				<span class="tags-title">Tags:</span>
+				<a href="#" rel="tag" class="label label-default">bootstrap</a>
+				<a href="#" rel="tag" class="label label-default">twitter</a>
+			</p>
+		</article>
+		<article>
+			<div class="page-header">
+				<h3 id="grid">Grid system</h3>
+			</div>
+			<p class="meta">Posted
+				<time datetime="2012-07-24" pubdate="">July 24, 2012</time>
+				by <a href="http://320press.com/wpbs/author/cbarnes/" title="Posts by Chris Barnes" rel="author">Chris
+					Barnes</a> <span class="amp">&amp;</span> filed under <a
+					href="http://320press.com/wpbs/category/releases/" title="View all posts in Releases"
+					rel="category tag">Releases</a>.
+			</p>
+			<p>
+				We make the WordPress Bootstrap CSS plugin that your referred to earlier, on Host Like Toast.</br>
+				This plugin is free and open-source, and we have tutorials on the website for how you can use WordPress
+				shortcodes to implement some of the bootstrap features.</br>
+				You could also, in your themes, use the do_shortcode() function to implement the existing shortcodes
+				easily.
+				Today we released version 2.0.0-beta so you can immediately start taking full advantage of Twitter
+				Bootstrap
+				2.0.</br>
+				We make the WordPress Bootstrap CSS plugin that your referred to earlier, on Host Like Toast.</br>
+				This plugin is free and open-source, and we have tutorials on the website for how you can use WordPress
+				shortcodes to implement some of the bootstrap features.</br>
+				You could also, in your themes, use the do_shortcode() function to implement the existing shortcodes
+				easily.
+				Today we released version 2.0.0-beta so you can immediately start taking full advantage of Twitter
+				Bootstrap
+				2.0.</br>
+			</p>
+
+			<p class="tags">
+				<span class="tags-title">Tags:</span>
+				<a href="#" rel="tag" class="label label-default">bootstrap</a>
+				<a href="#" rel="tag" class="label label-default">twitter</a>
+			</p>
+		</article>
+	</div>
+	<div class="col-md-3">
+		content
+	</div>
 </div>
