--- a/application/modules/default/views/scripts/layout/layout4/layout.phtml
+++ b/application/modules/default/views/scripts/layout/layout4/layout.phtml
@@ -1,20 +1,17 @@
 <?php
-$this->headTitle( 'GuitarPrime' );
 $this->setEncoding( 'utf-8' );
 $this->headMeta()->appendHttpEquiv( 'Content-Type', 'text/html;charset=ISO-8859-1' );
 $this->headMeta()->appendName( 'viewport', 'width=device-width, initial-scale=1.0' );
 
 //incluir css
 $this->headLink()->appendStylesheet( $this->baseUrl() . '/bootstrap/dist/css/bootstrap.min.css' );
-$this->headLink()->appendStylesheet( $this->baseUrl() . '/css/layout3.css' );
-$this->headLink()->appendStylesheet( $this->baseUrl() . '/css/footer.css' );
-$this->headLink()->appendStylesheet( $this->baseUrl() . '/css/carousel.css' );
+$this->headLink()->appendStylesheet( $this->baseUrl() . '/css/layout4.css' );
+$this->headLink()->appendStylesheet( $this->baseUrl() . '/css/footer4.css' );
 $this->cssHelper( $this->baseUrl() );
 
 //incluir js
-$this->headScript()->prependFile( $this->baseUrl() . '/js/default.js' );
-$this->headScript()->prependFile( $this->baseUrl() . '/bootstrap/dist/js/bootstrap.min.js' );
-$this->headScript()->prependFile( $this->baseUrl() . '/js/jquery-1.10.2.min.js' );
+$this->headScript()->appendFile( $this->baseUrl() . '/js/jquery-1.10.2.min.js' );
+$this->headScript()->appendFile( $this->baseUrl() . '/bootstrap/dist/js/bootstrap.min.js' );
 $this->javascriptHelper( $this->baseUrl() );
 ?>
 
@@ -25,21 +22,18 @@ $this->javascriptHelper( $this->baseUrl() );
 	<?php echo $this->headTitle() ?>
 	<?php echo $this->headLink() ?>
 	<?php echo $this->headStyle() ?>
-	<link rel="shortcut icon" href="http://www.marketingmo.com/wp/wp-content/uploads/2009/05/gp-icon-orange-128px.png">
 </head>
 <body>
 
-<?php echo $this->partial( 'layout/layout3/header.phtml' ); ?>
+<?php echo $this->partial( 'layout/layout4/header.phtml' ); ?>
 
 <?php
 if ( Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 'index' && Zend_Controller_Front::getInstance()->getRequest()->getActionName() == 'index' ) {
-	echo $this->partial( 'layout/layout2/carousel.phtml' );
+	echo $this->partial( 'layout/layout4/jumbotron.phtml' );
 }
 ?>
 
-
 <div class="wrapper">
-	<div class="pushTop"><!--//--></div>
 	<div class="container">
 		<?php if ( isset( $this->title ) ) : ?>
 			<div class="page-header">
@@ -57,7 +51,7 @@ if ( Zend_Controller_Front::getInstance()->getRequest()->getControllerName() == 
 	<div class="push"><!--//--></div>
 </div>
 
-<?php echo $this->partial( 'layout/layout3/footer.phtml' ); ?>
+<?php echo $this->partial( 'layout/layout4/footer.phtml' ); ?>
 
 
 <?php echo $this->headScript() ?>
