- alteração em view helpers - crud admin/user

--- a/application/modules/admin/views/scripts/user/edit.phtml
+++ b/application/modules/admin/views/scripts/user/edit.phtml
@@ -1,4 +1,6 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>User</b> and script/action name <b>edit</b></p>
-</div>
+<?php $this->title = 'User'; ?>
+<?php $this->subtitle = 'edit'; ?>
+
+	<p class="pull-right"><?php echo $this->Voltar(); ?></p>
+
+<?php echo $this->form; ?>
