--- a/application/modules/admin/views/scripts/user/add.phtml
+++ b/application/modules/admin/views/scripts/user/add.phtml
@@ -1,4 +1,6 @@
 <?php $this->title = 'User'; ?>
 <?php $this->subtitle = 'add'; ?>
 
+	<p class="pull-right"><?php echo $this->Voltar(); ?></p>
+
 <?php echo $this->form; ?>
