--- a/application/modules/admin/views/scripts/user/index.phtml
+++ b/application/modules/admin/views/scripts/user/index.phtml
@@ -1,4 +1,21 @@
-<br /><br />
-<div id="view-content">
-	<p>View script for controller <b>User</b> and script/action name <b>index</b></p>
-</div>
+<?php $this->title = 'Admin' ?>
+
+<p class="pull-right"><?php echo $this->AddLinkHelper(); ?></p>
+
+<table class="table">
+	<tr>
+		<th>Id</th>
+		<th>Name</th>
+		<th>Options</th>
+	</tr>
+	<?php foreach ( $this->data as $row ): ?>
+		<tr>
+			<td><?php echo $row['adminId'] ?></td>
+			<td><?php echo $row['adminName'] ?></td>
+			<td>
+				<?php echo $this->Edit( $row['adminId'] ) ?>
+				<?php echo $this->ConfirmDelete( $row['adminId'] ) ?>
+			</td>
+		</tr>
+	<?php endforeach; ?>
+</table>
