incluido CRUD instrument, language  incluido My_Controller_Action  atualizado database

--- a/application/modules/admin/views/scripts/layout/layout3/layout.phtml
+++ b/application/modules/admin/views/scripts/layout/layout3/layout.phtml
@@ -48,6 +48,8 @@ $this->javascriptHelper( $this->baseUrl() );
 	<div class="push"><!--//--></div>
 </div>
 
+<?php echo $this->partial( 'layout/layout3/footer.phtml' ); ?>
+
 <?php echo $this->headScript() ?>
 </body>
 </html>
