- incluido login admin  - incluido menu admin

--- a/application/modules/admin/views/scripts/layout/layout3/layout.phtml
+++ b/application/modules/admin/views/scripts/layout/layout3/layout.phtml
@@ -29,6 +29,7 @@ $this->javascriptHelper( $this->baseUrl() );
 </head>
 <body>
 
+<?php echo $this->partial( 'layout/layout3/header.phtml' ); ?>
 
 <div class="wrapper">
 	<div class="container">
