- incluido package admin  - alterado sub-category admin

--- a/application/modules/admin/views/scripts/layout/layout3/layout.phtml
+++ b/application/modules/admin/views/scripts/layout/layout3/layout.phtml
@@ -6,9 +6,8 @@ $this->headMeta()->appendName( 'viewport', 'width=device-width, initial-scale=1.
 
 //incluir css
 $this->headLink()->appendStylesheet( $this->baseUrl() . '/bootstrap/dist/css/bootstrap.min.css' );
-$this->headLink()->appendStylesheet( $this->baseUrl() . '/css/layout3.css' );
-$this->headLink()->appendStylesheet( $this->baseUrl() . '/css/footer.css' );
-$this->headLink()->appendStylesheet( $this->baseUrl() . '/css/carousel.css' );
+$this->headLink()->appendStylesheet( $this->baseUrl() . '/css/admin/layout3.css' );
+$this->headLink()->appendStylesheet( $this->baseUrl() . '/css/admin/footer.css' );
 $this->cssHelper( $this->baseUrl() );
 
 //incluir js
