--- a/application/modules/admin/views/scripts/user/index.phtml
+++ b/application/modules/admin/views/scripts/user/index.phtml
@@ -1,4 +1,4 @@
-<?php $this->title = 'Admin' ?>
+<?php $this->title = 'User' ?>
 
 <p class="pull-right"><?php echo $this->AddLinkHelper(); ?></p>
 
