adaptado ao ckeditor

--- a/application/modules/admin/views/scripts/layout/layout3/layout.phtml
+++ b/application/modules/admin/views/scripts/layout/layout3/layout.phtml
@@ -24,6 +24,7 @@ $this->javascriptHelper( $this->baseUrl() );
 	<?php echo $this->headTitle() ?>
 	<?php echo $this->headLink() ?>
 	<?php echo $this->headStyle() ?>
+	<script src="<?php echo $this->baseUrl() . '/js/ckeditor/ckeditor.js'; ?>"></script>
 	<link rel="shortcut icon" href="http://www.marketingmo.com/wp/wp-content/uploads/2009/05/gp-icon-orange-128px.png">
 </head>
 <body>
