incluido SubPackage Trans

--- a/application/modules/admin/views/scripts/sub-package/index.phtml
+++ b/application/modules/admin/views/scripts/sub-package/index.phtml
@@ -17,6 +17,7 @@
 			<td>
 				<?php echo $this->Edit( $row['subPackageId'] ) ?>
 				<?php echo $this->ConfirmDelete( $row['subPackageId'] ) ?>
+				<?php echo $this->Link( $this->Icon( 'random' ), null, 'translate', array( 'id' => $row['subPackageId'] ) ) ?>
 			</td>
 		</tr>
 	<?php endforeach; ?>
